[FIX] Wrong color

--- a/src/sass/settings/_variables.scss
+++ b/src/sass/settings/_variables.scss
@@ -37,7 +37,7 @@ $sidebar-margin: 20px;
 // ------------------------------ //
 
 // Default values
-$c-bg-document: #f00;
+$c-bg-document: #fff;
 $c-border-default: #1a1a1a;
 $c-txt-default: #1a1a1a;
 $c-alert: #ca0003;
